update UX/UI